chore: Bring the build into 2025.